[tool.poetry]
name = "smo-kursov"
version = "0.1.0"
description = "Курсовая работа по SMO"
authors = ["Ilia Novikov WorkB <nov.ilucha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Ciw = "^3.2.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
